tests/syntax-error/DataTypeSignature.vix
type bool where
  False True : bool

bool : type
